--- a/index.html
+++ b/index.html
@@ -239,33 +239,33 @@
         <div class="course-card">
             <h2>HTML</h2>
             <p>Learn to structure web pages using semantic HTML elements.</p>
-            <a href="web technology/html_tutorial.pdf" download class="btn">Download Notes</a>
+            <a href="html_tutorial.pdf" download class="btn">Download Notes</a>
         </div>
         <div class="course-card">
             <h2>CSS</h2>
             <p>Style your HTML using modern CSS layouts and animations.</p>
-            <a href="web technology/css_tutorial.pdf" download class="btn">Download Notes</a>
+            <a href="css_tutorial.pdf" download class="btn">Download Notes</a>
         </div>
         
         <div class="course-card">
             <h2>JavaScript</h2>
             <p>Add interactivity and logic to your websites using JavaScript.</p>
-            <a href="web technology/javascript_tutorial.pdf" download class="btn">Download Notes</a>
+            <a href="javascript_tutorial.pdf" download class="btn">Download Notes</a>
         </div>
         <div class="course-card">
             <h2>PHP</h2>
             <p>Learn server-side scripting with PHP for dynamic web applications.</p>
-            <a href="web technology/php_tutorial.pdf" download class="btn">Download Notes</a>
+            <a href="php_tutorial.pdf" download class="btn">Download Notes</a>
         </div>
         <div class="course-card">
             <h2>MySQL</h2>
             <p>Handle databases with MySQL: queries, joins, and CRUD operations.</p>
-            <a href="web technology/mysql-tutorial.pdf" download class="btn">Download Notes</a>
+            <a href="mysql-tutorial.pdf" download class="btn">Download Notes</a>
         </div>
         <div class="course-card">
             <h2>XML</h2>
             <p>It's like HYML you can easily define your own tag.</p>
-            <a href="web technology/xml_tutorial.pdf" download class="btn">Download Notes</a>
+            <a href="xml_tutorial.pdf" download class="btn">Download Notes</a>
         </div>
     </section>
 
@@ -281,7 +281,7 @@
         <div class="course-card">
             <h2>Lab Manuals</h2>
             <p>Access all laboratory exercises and practical assignments for Web Technology course.</p>
-            <a href="web technology/web technology lab manual.pdf" download class="btn">Download Notes</a>
+            <a href="web technology lab manual.pdf" download class="btn">Download Notes</a>
         </div>
     </section>
 
