--- a/Referances.html
+++ b/Referances.html
@@ -211,7 +211,7 @@
             <div class="logo">Web<span>Technology 036</span></div>
             <nav>
                 <ul>
-                    <li><a href="new 2.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                 </ul>
             </nav>
         </div>
