--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <div class="logo">web<span>Technology 036</span></div>
             <nav>
                 <ul>
-                    <li><a href="new 2.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#notes">Notes</a></li>
                     <li><a href="#syllabus">Syllabus</a></li>
                     <li><a href="#lab">Lab Manual</a></li>
