--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         <div class="course-card">
             <h2>References</h2>
             <p>Additional resources and reference materials for Web Technology.</p>
-            <a href="Rferances.html" class="btn" onclick="viewReferences()">View References</a>
+            <a href="Rferances.html" class="btn">View References</a>
         </div>
     </section>
     
