--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         <div class="course-card">
             <h2>References</h2>
             <p>Additional resources and reference materials for Web Technology.</p>
-            <a href="Rferances.html" class="btn">View References</a>
+            <button onclick="window.location.href='Referances.html'" class="btn">View References</button>
         </div>
     </section>
     
