--- a/index.html
+++ b/index.html
@@ -286,12 +286,13 @@
     </section>
 
     <section id="references" class="courses">
-        <div class="course-card">
-            <h2>References</h2>
-            <p>Additional resources and reference materials for Web Technology.</p>
-            <button onclick="window.location.href='Referances.html'" class="btn">View References</button>
-        </div>
-    </section>
+    <div class="course-card">
+        <h2>References</h2>
+        <p>Additional resources and reference materials for Web Technology.</p>
+        <a href="Referances.html" class="btn">View References</a>
+    </div>
+</section>
+
     
 
     <footer>
