--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         <div class="course-card">
             <h2>JavaScript</h2>
             <p>Add interactivity and logic to your websites using JavaScript.</p>
-            <a href="css_tutorial.pd" download class="btn">Download Notes</a>
+            <a href="javascript_tutorial.pdf" download class="btn">Download Notes</a>
         </div>
         <div class="course-card">
             <h2>PHP</h2>
